# Digit_classifier_Fastapi

./: .gitignore  README.md  frontend.py  inference.py  main.py  model.joblib  model.pkl  pyproject.toml
